Updating the Jupyter notebook.

--- a/nlp/I.2-tokenizer/meu_notebook.ipynb
+++ b/nlp/I.2-tokenizer/meu_notebook.ipynb
@@ -890,6 +890,13 @@
     "for value in vocab.values():\n",
     "    print(f\"'{value.decode('utf-8', errors='replace')}'\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fim do notebook."
+   ]
   }
  ],
  "metadata": {
